hphp/hack/test/typecheck/reactive/test_mutable_rxshallow1.php.exp
File "test_mutable_rxshallow1.php", line 10, characters 3-7:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
